addding read | write  | open | close | seek files

--- a/practices.ipynb
+++ b/practices.ipynb
@@ -81,13 +81,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "74fc615d-78d9-42a6-af50-6738c5854527",
    "metadata": {},
    "outputs": [],
    "source": [
-    " "
+    "#Open the file and use .read() to save the contents of the file to a string called fields.\n",
+    "#Make sure the file is closed at the end. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "646a2b82-63ef-40fe-938f-bff5a4ecc4b1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myfile = open('contacts.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "81327517-3f08-4eca-8ae3-75c464daea7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'First_Name Last_Name, Title, Extension, Email\\n'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "e7765841-9b7d-4f2d-bf13-39c3d723c6c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile.seek(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "7b47083e-6272-488e-bb0e-b2321c2b14a7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fields = myfile.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "9fff3981-fa18-4319-9209-83bc1c08f33f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First_Name Last_Name, Title, Extension, Email\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fields)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "f8440dc3-ea53-4853-835a-d859df79d13c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d4f0a6d-cc15-4388-8b1e-8623468ac4fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
