adding pdf | practices install PyPDF2 | read PDF | select pages

--- a/practices.ipynb
+++ b/practices.ipynb
@@ -183,8 +183,97 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "1d4f0a6d-cc15-4388-8b1e-8623468ac4fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Working with PDF Files \n",
+    "# Use PyPDF2 to open the file Business_Proposal.pdf. Extract the text of page 2."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "d696f9d2-c0a9-4a5a-b437-0e708709362e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting PyPDF2\n",
+      "  Downloading pypdf2-3.0.1-py3-none-any.whl.metadata (6.8 kB)\n",
+      "Downloading pypdf2-3.0.1-py3-none-any.whl (232 kB)\n",
+      "Installing collected packages: PyPDF2\n",
+      "Successfully installed PyPDF2-3.0.1\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "pip install PyPDF2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "e13e96ac-74f2-4d0b-9ac2-1a14f8e32ed4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import  PyPDF2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "e5d1a7f6-6890-443c-9f22-2bc55bfbf699",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdf_path = \"Business_Proposal.pdf\"\n",
+    "mypdf = open(pdf_path,'rb')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "f450cba0-6b7b-45d3-9925-28654ef251b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pdf_reader = PyPDF2.PdfReader(mypdf)\n",
+    "num_pages = len(pdf_reader.pages)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "7da5c717-e630-478e-a40c-a820023f17db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AUTHORS:  \n",
+      "Amy Baker, Finance Chair, x345, abaker@ourcompany.com  \n",
+      "Chris Donaldson, Accounting Dir., x621, cdonaldson@ourcompany.com  \n",
+      "Erin Freeman, Sr. VP, x879, efreeman@ourcompany.com  \n"
+     ]
+    }
+   ],
+   "source": [
+    "page = pdf_reader.pages[1]\n",
+    "text = page.extract_text()\n",
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7ab260f-9362-41ea-a9bb-d09a83734ade",
    "metadata": {},
    "outputs": [],
    "source": []
