adding Regular Expressions | Open File r-w-seek review

--- a/practices.ipynb
+++ b/practices.ipynb
@@ -1,14 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "69b94335-a180-4dc2-9b5e-bafefd2de2a6",
+   "cell_type": "markdown",
+   "id": "d141b1e9-4775-4052-9773-ae2364c91535",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#f-string\n",
-    "# Print an f-string that displays NLP stands for Natural Language processing using the variables provided."
+    "# f-string\n",
+    "### Print an f-string that displays NLP stands for Natural Language processing using the variables provided."
    ]
   },
   {
@@ -50,14 +48,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "38418420-971b-4cee-bbc6-055f211ac471",
+   "cell_type": "markdown",
+   "id": "ea289de9-481a-4b84-b55b-7266b78df0f9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Files \n",
-    "# Create a file in the current working directory called contacts.txt by running the cel below:"
+    "# Files \n",
+    "### Create a file in the current working directory called contacts.txt by running the cel below:"
    ]
   },
   {
@@ -80,14 +76,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "74fc615d-78d9-42a6-af50-6738c5854527",
+   "cell_type": "markdown",
+   "id": "c5c6e0e1-87f3-494e-9884-bf0a55fe6e82",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Open the file and use .read() to save the contents of the file to a string called fields.\n",
-    "#Make sure the file is closed at the end. "
+    "# Open the file \n",
+    "### Open the file and use .read() to save the contents of the file to a string called fields.\n",
+    "### Make sure the file is closed at the end. "
    ]
   },
   {
@@ -182,14 +177,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 65,
-   "id": "1d4f0a6d-cc15-4388-8b1e-8623468ac4fe",
+   "cell_type": "markdown",
+   "id": "f16082bc-635d-4d8e-91c3-4cb83b328ccd",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "#Working with PDF Files \n",
-    "# Use PyPDF2 to open the file Business_Proposal.pdf. Extract the text of page 2."
+    "# Working with PDF Files \n",
+    "### Use PyPDF2 to open the file Business_Proposal.pdf. Extract the text of page 2."
    ]
   },
   {
@@ -271,9 +264,224 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b6796c25-1377-4a95-9de9-a3b311b5f9a2",
+   "metadata": {},
+   "source": [
+    "# Open the file \n",
+    "### Open the file contacts.txt in append mode . Add the text of page 2 from above to contacts.txt\n",
+    "### Challenge : See if you can remove the word \"Authors:\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "92ae4e5a-4566-4fdd-90f2-e2e4bdc359cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "228"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile = open('contacts.txt',mode='a+')\n",
+    "myfile.write('First_Name Last_Name, Title, Extension, EmailAuthors: Amy Baker, Finance Chair, x345, abaker@ourcompany.com \\n Chris Donaldson, Accounting Dir. , x621, cdonaldson@ourcompany.com \\nrin FReeman, Sr. VP, x879, efreeman@ourcompany.com')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "id": "b0435bed-5b09-463f-9772-a4da2525dfe3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile.seek(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "id": "85aeee40-28fa-471d-ad90-8a42054f965e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'First_Name Last_Name, Title, Extension, EmailAuthors: Amy Baker, Finance Chair, x345, abaker@ourcompany.com \\n Chris Donaldson, Accounting Dir. , x621, cdonaldson@ourcompany.com \\nrin FReeman, Sr. VP, x879, efreeman@ourcompany.com'"
+      ]
+     },
+     "execution_count": 225,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "efa04720-52f8-4f70-add8-bc0ca8a03a40",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myfile.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "id": "9a72f247-df66-4fcc-9377-b46cf8f7d35f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('contacts.txt', mode='r') as file:\n",
+    "    content = file.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "id": "6285d877-f8e9-43de-b2dc-743ffee0d03e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "updated_content = content.replace('Authors', '')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 251,
+   "id": "b62c50cf-8c5d-49d4-b18b-475db960be39",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('contacts.txt', mode='w') as file:\n",
+    "    file.write(updated_content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "0b474312-bbee-4d37-a40e-70fe7f733e0e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myfile = open('contacts.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "id": "7d8ca38e-f2d6-429a-a057-7ee8ca30cf6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'First_Name Last_Name, Title, Extension, Email: Amy Baker, Finance Chair, x345, abaker@ourcompany.com \\n Chris Donaldson, Accounting Dir. , x621, cdonaldson@ourcompany.com \\nrin FReeman, Sr. VP, x879, efreeman@ourcompany.com'"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "myfile.read()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "e2fef0bf-2330-4329-acad-99f4092fb656",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "myfile.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "620a186e-4ed3-4a33-8f47-1c364cdc0618",
+   "metadata": {},
+   "source": [
+    "# Regular Expressions \n",
+    "### using the page_two text variable created above, extract any email addresses that were contained in the file Business_Proposal.pdf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 281,
+   "id": "02bc7c85-acc0-4032-84c4-217c09f89270",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First_Name Last_Name, Title, Extension, EmailAuthors: Amy Baker, Finance Chair, x345, abaker@ourcompany.com \n",
+      " Chris Donaldson, Accounting Dir. , x621, cdonaldson@ourcompany.com \n",
+      "rin FReeman, Sr. VP, x879, efreeman@ourcompany.com\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 395,
+   "id": "fc03a05e-5f82-421a-8a43-387508f89307",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pattern = r'\\s*([/@][^\\s]*\\.com)\\s'\n",
+    "email = re.findall(pattern, text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 397,
+   "id": "7c77af0e-10e5-4c9d-b554-43f6c8c7f51b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['@ourcompany.com', '@ourcompany.com']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(email)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7ab260f-9362-41ea-a9bb-d09a83734ade",
+   "id": "ebccf9b9-7ddc-4fda-bd04-ca207881b81f",
    "metadata": {},
    "outputs": [],
    "source": []
